--- a/pom.xml
+++ b/pom.xml
@@ -151,20 +151,34 @@
         </dependency>
 
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
+
+			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-testCompile</id>
+                        <phase>test-compile</phase>
+                        <configuration>
+                            <testExcludes>
+                                <exclude>**/TestInitActionServiceBQIntegration.java</exclude>
+                                <exclude>**/TestInitActionServiceMSSQLIntegration.java</exclude>
+                                <exclude>**/TestInitActionServiceMySQLIntegration.java</exclude>
+                                <exclude>**/TestInitActionServicePostgreSQLIntegration.java</exclude>
+                                <exclude>**/TestInitActionServiceSFTPIntegration.java</exclude>
+                            </testExcludes>
+                        </configuration>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
